kubernetes/kb/kb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kb-prod
  labels:
    run: kb-prod
spec:
  ports:
  - port: 80
    name: kb-prod
    targetPort: 80
  selector:
    run: kb-prod
